Save refreshToken in cookie

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -21,8 +21,8 @@
     "Audience": "CoreIdentityUser",
     "DurationInMinutes": 1,
     "RefreshTokenLength": 128,
-    "RefreshTokenDurationInHours":  168
-
+    "RefreshTokenDurationInHours": 168,
+    "SaveRefreshTokenInCookie" : true
   },
   "ConnectionStrings": {
     "PersistenceConnection": "Server=.\\SQLExpress;Database=DataWebApiDB;Trusted_Connection=True;",
