Added email service configuration

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "EMailSettings": {
+    "Debug" :  true,
     "EmailFrom": "info@email.com",
     "SmtpHost": "smtp.email.com",
     "SmtpPort": 587,
@@ -22,7 +23,8 @@
     "DurationInMinutes": 1,
     "RefreshTokenLength": 128,
     "RefreshTokenDurationInHours": 168,
-    "SaveRefreshTokenInCookie" : true
+    "SaveRefreshTokenInCookie": true,
+    "EmailConfirmationRequired": true
   },
   "ConnectionStrings": {
     "PersistenceConnection": "Server=.\\SQLExpress;Database=DataWebApiDB;Trusted_Connection=True;",
