Send verification mail while registration

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -24,7 +24,9 @@
     "RefreshTokenLength": 128,
     "RefreshTokenDurationInHours": 168,
     "SaveRefreshTokenInCookie": true,
-    "EmailConfirmationRequired": true
+    "EmailConfirmationRequired": true,
+    "EmailConfirmationUrl": "/api/confirm-email"
+
   },
   "ConnectionStrings": {
     "PersistenceConnection": "Server=.\\SQLExpress;Database=DataWebApiDB;Trusted_Connection=True;",
