--- a/Infrastructure.IdentityLibrary/Infrastructure.IdentityLibrary.csproj
+++ b/Infrastructure.IdentityLibrary/Infrastructure.IdentityLibrary.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.MailLibrary\Infrastructure.EMailLibrary.csproj" />
     <ProjectReference Include="..\Infrastructure.Shared\Infrastructure.SharedLibrary.csproj" />
   </ItemGroup>
 
