Added email verification to service and controller

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -25,7 +25,7 @@
     "RefreshTokenDurationInHours": 168,
     "SaveRefreshTokenInCookie": true,
     "EmailConfirmationRequired": true,
-    "EmailConfirmationUrl": "/api/confirm-email"
+    "EmailConfirmationUrl": "/api/Account/confirm"
 
   },
   "ConnectionStrings": {
