Added password forgot funtion to service and controller

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -25,7 +25,8 @@
     "RefreshTokenDurationInHours": 168,
     "SaveRefreshTokenInCookie": true,
     "EmailConfirmationRequired": true,
-    "EmailConfirmationUrl": "/api/Account/confirm"
+    "EmailConfirmationUrl": "/api/Account/confirm",
+    "ResetForgottenPasswordUrl": "/api/Account/resetPassword"
 
   },
   "ConnectionStrings": {
