--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -26,7 +26,7 @@
     "SaveRefreshTokenInCookie": true,
     "EmailConfirmationRequired": true,
     "EmailConfirmationUrl": "/api/Account/confirm",
-    "ResetForgottenPasswordUrl": "/api/Account/resetPassword"
+    "ResetForgottenPasswordUrl": "https://localhost/gui/Account/resetPassword"
 
   },
   "ConnectionStrings": {
